@@ -1,3 +1,8 @@
+2007-10-31  Nick Clifton  <nickc@redhat.com>
+
+	* elf-m10300.c (mn10300_elf_relax_delete_bytes): Do not look for
+	align relocs when there are no relocs attached to the section.
+
 2007-10-31  Alan Modra  <amodra@bigpond.net.au>
 
 	* elf-bfd.h (bfd_elf_match_symbols_in_sections): Don't declare.
